app/dev/css/scripturedin.css
.chapter {
    padding: 10px 20px;
}

.chapter h2 {
    font-size: 25px;
}

.chapter h3 {
    font-size: 20px;
    font-weight: 300;
    margin-bottom: 20px;
}

.chapter .verse {
    /*font-family: "medium-content-serif-font",Georgia,Cambria,"Times New Roman",Times,serif;*/
    letter-spacing: .01rem;
    font-weight: 400;
    font-style: normal;
    font-size: 18px;
    line-height: 1.58;
    letter-spacing: -0.003em;
    margin-bottom: 10px;
}

h2.book {
    /*font-family: "medium-content-sans-serif-font","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;*/
    font-weight: 700;
    font-style: normal;
    font-size: 36px;
    line-height: 1.15;
    letter-spacing: -0.02em;
}

p.highlight {
    background: rgba(33, 150, 243, 0.13);
}

#footer {
    position: relative;
}

wysiwyg-edit .tinyeditor .sizer {
    min-height: 100px;
    height: 100px;
    max-height: 100px;
}

wysiwyg-edit .tinyeditor .tinyeditor-footer {
    display: none;
}

body {
    font-family: roboto;
    /*height: 100% !important;*/
    font-size: 14px;
}

md-toolbar.md-warn > md-tabs.md-default-theme,
md-tabs > md-tabs-wrapper > md-tabs-canvas > md-pagination-wrapper > md-tab-item:not([disabled]) {
    color: #7a7a7a;
}

md-toolbar.md-warn > md-tabs.md-default-theme,
md-tabs > md-tabs-wrapper > md-tabs-canvas > md-pagination-wrapper > md-tab-item:not([disabled]).md-active,
md-toolbar.md-warn > md-tabs.md-default-theme,
md-tabs > md-tabs-wrapper > md-tabs-canvas > md-pagination-wrapper > md-tab-item:not([disabled]).md-focused {
    color: #000;
}

#sermon .md-tab, #sermon h4 {
    font-size: 16px;
    text-transform: capitalize;

}

.social-login img {
    height: 50px;
}

/*home*/
body {
    height: auto;
    background: #fff;
}

#frame {

    /*width: 1024px;*/
    margin: 0 auto;
}

#login-signup-reset {
    /*height: 650px;*/
    padding-top: 100px;

}

@media (min-width: 600px) {
    .lc-block {
        width: 400px;
    }
}

@media (max-width: 600px) {
    .lc-block {
        width: 300px;
    }
}

.lc-block {
    padding: 15px 25px 15px 10px !important;
}

.social-login {
    list-style: none;
    padding: 0;
    margin: 0;
    /*position: relative;*/
    width: 100%;
    text-align: center;
    left: 0%;
    bottom: -45px;
}

.social-login > li {
    font-size: 12px;
    border-radius: 10%;
    padding: 4px;
    display: inline-block;
    margin: 0 2px;
    cursor: pointer;
    vertical-align: top;
    color: #fff;
    line-height: 16px;
    min-width: 16px;
    min-height: 16px;
    text-transform: uppercase;
}

.input-group {
    width: 100%;
}

.chosen-container-single .chosen-single {
    font-size: 18px;
}

.fab-menu {
    position: fixed;
    right: 0px;
    bottom: 0px;
    z-index: 25;
}

.main-content {
    background-color: #EDECEC;
}

#calendar .fc-toolbar .fc-center {
    margin-top: 90px !important;
}

#calendar .fc-toolbar {
    height: 150px !important;
}

#study-note .sizer {
    min-height: 400px;
}

a.like {
    color: inherit;
}

@media (max-width: 767px) {
    #profile-main .pm-overview {
        width: 100%;
        background: transparent !important;
        /*background: #333;*/
        text-align: center;
    }
}

.privacy li {
    padding: 10px;
    background-color: rgba(158, 158, 158, 0.12);
    margin-bottom: 5px;
}

.privacy li.selected > a, .privacy li.selected > a:hover {
    color: #fff;
}

.privacy li.selected > a {
    color: #fff;
}

.privacy li.selected {
    background-color: rgb(33, 150, 243);
}

.translations li.selected {
    background-color: #E7EAF5;
}

.name-tag {
    background-color: rgba(33, 150, 243, 0.25);
    padding: 2px;
}

div:empty:before {
    content: attr(data-placeholder);
    color: gray
}

.intro-text-bg {
    background-color: rgba(21, 15, 16, 0.59);
    padding: 15px;
}

.intro-text-bg h1 {
    margin-bottom: 0px;
    color: rgba(255, 255, 255, 0.95);
    font-size: 50px;
    text-align: center;
}

.intro-text-bg p {
    padding-top: 10px;
    color: rgba(224, 224, 224, 0.77);
    font-size: 20px;
    text-align: center;
}

.header-content {
    margin: 0 auto;
    padding-top: 130px;
}

/** large device **/
@media (min-width: 768px) {

    .center-search {
        position: relative !important;
        background: none !important;
        opacity: 1 !important;
        margin: 0 auto !important;
        width: 600px !important;
    }

    .header {
        background-position: center;
        background-size: cover;
    }

    .header-content {
        width: 800px;
        padding-top: 150px;

    }

    .intro-text-bg p {
        width: 800px;
    }

    .menu-trigger {
        display: none;
    }

    #top-search {
        display: none;
    }
}

/** small device **/
@media (max-width: 768px) {

    .header {
        background-position: top left;
        background-size: 100% 90% !important;
        height: 550px !important;
        /*height: 100% !important;*/
    }

    .header-content {
        padding-top: 100px;

    }

    #menu-trigger {
        padding-top: 6px;
    }

    .header-inner {
        padding: 5px !important;
        padding-top: 10px;
    }

    .header-inner .logo {
        font-size: 28px;
    }
    .bible-top-menu {
        padding-top: 8px !important;
    }
    .line-wrap {
        margin: 17px 18px !important;
    }

    /*.intro-text-bg p {*/
    /*font-size: 45px;*/
    /*text-align: center;*/
    /*}*/
}

.info {
    padding: 90px;
}

.info .section {
    text-align: center;
    margin-bottom: 40px;
    padding: 25px;
}

.info .section h3 {
    padding-bottom: 20px;
}

.info .section p {
    font-size: 15px;
    line-height: 1.5;
}

#footer {
    background-color: #edecec;
    color: #000;
}

#footer .f-menu > li > a {
    color: #000;
}

#sidebar.menu {
    top: 0px;
    height: 100%;
}

.sidebar-mask {
    width: 100%;
    background-color: rgba(0, 0, 0, 0.59);
    height: 100%;
    position: absolute;
    overflow-y: hidden;
    cursor: pointer;
}

body.overflow {
    overflow: hidden;
}

.menu .main-menu {
    padding-top: 30px;
    font-size: 20px;
}

.menu .main-menu > li > a:hover {
    background-color: #4C4C4C;
    color: #fff;
}

/* main page **/
.header .logo a {
    text-transform: none;
    font-size: 30px;
}

/** header **/
.header {
    background-image: url('/img/bg3.jpg');
    /*height: 100%;*/
    height: 680px;
    width: 100%;
    left: 0;
    top: 0;
    /*position: absolute;*/
    background-size: 100% auto;
    background-repeat: no-repeat;
}

.header .header-inner {
    padding: 35px;
    color: #fff;
}

.header-inner .logo {
    font-size: 32px;
}

.header .top-menu li {
    font-size: 20px;
    margin-right: 40px;
}

.modal-content {
    padding: 20px;
    margin: 100px auto;
}

.modal-login .modal-content {
    width: 300px;
}

.modal-signup .modal-content {
    width: 360px;
}

.modal .modal-body {
    padding: 0px;
}

.signup-modal button {
    text-transform: none;
    font-size: 15px;
}

.btn-facebook {
    border-color: #3B5998;
    border-bottom-color: #263a63;
    background-color: #3B5998;
    color: #fff;
    padding: 10px;
}

.btn-facebook:hover {
    background-color: #3c6eae !important;
    color: #fff !important;
}

.social-buttons i.zmdi {
    padding-left: 10px;
    font-size: 20px;
}

.signup-or-separator {
    background: none;
    height: 34px;
    position: relative;
    text-align: center;
}

.signup-or-separator--text {
    background-color: #fff;
    display: inline-block;
    padding: 8px;
    font-size: 14px;
    font-weight: bold;
    color: #82888a;
}

.signup-or-separator hr {
    margin: -16px auto 10px auto;
    width: 90%;
}

.modal-350 {
    width: 350px;
}

.modal-300 {
    width: 300px;
}

.profile-menu {
    margin-bottom: 40px;
}

.profile-menu > a .profile-info {
    margin-top: 0px;
    background-color: rgba(0, 2, 4, 0.75); /*rgba(4, 93, 165, 0.89);*/
    text-align: left;
}

.profile-menu > a .profile-pic > img {
    height: 120px;
    border-radius: 50%;
    width: auto;
    border: 1px solid rgba(0, 0, 0, 0.14);
}

.profile-menu > a {
    background: none;
    height: 180px;
    background-color: #f7f7f7;
}

.profile-menu > a {
    text-align: center;
}

/*#main {*/
/*padding-top: 60px;*/
/*}*/

.scripture .card-header {
    padding: 15px;
}

.md-table-pagination .label {
    color: rgba(0, 0, 0, 0.54);
}

name-tag a {
    color: rgba(0, 0, 0, 0.87);
}

.note .card-header h2 {
    font-size: 25px;
}

.tinyeditor .sizer {
    max-height: 100%;
}

wysiwyg-edit .tinyeditor .sizer {
    min-height: 400px;
}

wysiwyg-edit.point .tinyeditor .sizer {
    min-height: 80px;
}

wysiwyg-edit.summary .tinyeditor .sizer {
    min-height: 250px;
}

.toast-danger .md-toast-content {
    background-color: rgba(234, 113, 113, 1);
    height: 25%;
}

.alert-info {
    background-color: #323232;
    color: #fff;
}

.alert-info button, .alert-danger .close {
    color: #fff;
    font-size: 25px;
}

.gray-body {
    background-color: #edecec;
}

.f-25 {
    font-size: 25px !important;
}

#header {
    height: 70px;
}

.scripture-highlight {
    background-color: rgba(214, 210, 25, 0.2);
    padding: 5px;
    font-weight: bold;
    cursor: pointer;
}

@media (min-width: 1200px) {
    body.sw-toggled #content {
        padding-left: 300px;
    }
}

.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
    transition: all linear 0.5s;
}

.animate-show.ng-hide {
    line-height: 0;
    opacity: 0;
    padding: 0 10px;
}

#verses h4 {
    margin-top: 20px;
    margin-bottom: 20px;
}

#bookactions {
    height: 325px;
    margin-bottom: 20px;
    overflow-y: scroll;
}

.book-action {
    background-color: #7c7c7c !important;
}

.bible-toc a {
    font-size: 16px;
}

.bible-toc a:hover {
    padding: 5px;
    background-color: #ddd;
    border-radius: 3px;
    color: black;
}

.bible-book a {
    font-size: 15px;
    color: #5e5e5e;
}
.bible-book a:hover {
    font-size: 15px;
    font-weight: bold;
    color: #000;
}

.bible-book .bs-item {
    background: #fff;
    margin-bottom: 30px;
    height: 25px;
    text-align: center;
    font-size: 14px;
    border-radius: 2px
}

.bible-book .bs-item:hover {
    background-color: #ddd;
}

.bible-header h1 {
    float: left;
}
.chapter-header {
    padding-bottom: 25px;
}

.chapter-header a {
    color: #7c7c7c;
}
.bible-header div {
    padding-top: 15px;
}

.bible-header .filter-bible {
    font-size: 16px;
    padding: 3px;
    width: 300px;
    margin: 0 auto;
    display: block;
    height: 40px;
}

